--- a/solo-project-spotify-react/src/components/SideBarComponent.css
+++ b/solo-project-spotify-react/src/components/SideBarComponent.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  color: white;
+  color: black;
   height: 100vh;
 }
 .side-bar {
@@ -8,7 +8,7 @@ body {
   position: sticky;
   z-index: 1;
   top: 0;
-  height: 40vh;
+  height: 85vh;
 }
 
 .side-bar-text {
